// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginFooterItem  with custom node 1`] = `
<div>
  <li
    class="pf-c-login__main-footer-links-item"
  >
    <a
      class="pf-c-login__main-footer-links-item-link"
      href=""
      target=""
    >
      <div>
        My custom node
      </div>
    </a>
  </li>
</div>
`;

exports[`className is added to the root element 1`] = `"pf-c-login__main-footer-links-item extra-class"`;

exports[`renders with PatternFly Core styles 1`] = `
<div>
  <li
    class="pf-c-login__main-footer-links-item"
  >
    <a
      class="pf-c-login__main-footer-links-item-link"
      href="#"
      target=""
    />
  </li>
</div>
`;
